use lazy load mode

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -22,6 +22,6 @@
     </ion-col>
   </form>
   <div text-center class="link-registration">
-    <a [navPush]="RegisterPage">Registrasi?</a>
+    <a (click)="goRegister()">Registrasi?</a>
   </div>
 </ion-content>
