--- a/src/pages/register/register-type-seller/register-type-seller.html
+++ b/src/pages/register/register-type-seller/register-type-seller.html
@@ -1,10 +1,8 @@
 <ion-content padding>
   <ion-row>
-    <ion-col col-6 text-center>
-      <img src="/assets/img/photo.jpg">
-    </ion-col>
-    <ion-col col-6 text-center>
-        <img src="/assets/img/photo.jpg">
+    <ion-col *ngFor="let typeSeller of typeSellers" col-6 text-center>
+      <img src="{{typeSeller.image}}">
+      <div>{{typeSeller.displayName}}</div>
     </ion-col>
   </ion-row>
 </ion-content>
