--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,7 +1,7 @@
 
 <ion-content class="background-page" padding>
 
-  <form [formGroup]="registerForm" class="form-validate" novalidate>
+  <form [formGroup]="registerForm" class="form-validate" novalidate padding>
     <ion-row>
       <ion-item>
         <ion-label>
