--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar hiddenbutton="true">
     <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>
@@ -14,4 +14,5 @@
     Take a look at the <code>src/pages/</code> directory to add or change tabs,
     update any existing page or create new pages.
   </p>
+  <button (click)="doLogOut()">logout</button>
 </ion-content>
